Fixed the responsive layOut on mobile phones where the Carousel and the welcome message overlay each other disrupting the gallery lightbox

--- a/src/index.css
+++ b/src/index.css
@@ -92,7 +92,7 @@ main {
   height: 100vh;
   overflow-y: auto;
   position: fixed;
-  z-index: 1200; /* just under the header(z-value) */
+  z-index: 1200; /* just under the header */
   background-position: top-left;
 }
 
@@ -110,18 +110,18 @@ main {
 
 /* ===== Carousel ===== */
 .carousel {
-  height: 400px;
+ 
   position: relative;
   border-radius: 12px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   z-index: 2;
-  margin-top: 120px; /* Space from fixed header and marquee */
 
 }
 .carousel-item:nth-child(3) img{
   object-position: top;
 }
 .carousel-inner img {
+  width: 100%;
   height: 400px;
   object-fit: cover;
 }
@@ -219,7 +219,7 @@ main {
 .marquee-wrapper {
   margin-top: 80px;
   z-index: 1045;
-  position: fixed;
+  position: relative;
 }
 
 .marquee-container {
@@ -307,7 +307,7 @@ main {
 .gallery-filters {
   display: flex;
   justify-content: center;
-  flex-wrap: wrap;
+  flex-wrap: no-wrap;
   gap: 0.5rem;
   margin: 1.5rem 0;
 }
@@ -315,7 +315,7 @@ main {
 .filter-btn {
   padding: 0.5rem 1rem;
   border: none;
-  background: #3370cb;
+  background: #050a9a;
   cursor: pointer;
   border-radius: 4px;
   transition: all 0.3s ease;
@@ -356,12 +356,7 @@ main {
     grid-template-columns: repeat(2, 1fr);
   }
 }
-@media(max-width:1024px){
-  data-aos{
-    opacity: 0;
-    overflow: hidden;
-  }
-}
+
 @media (max-width: 600px) {
   .gallery-grid.grid {
     grid-template-columns: 1fr;
@@ -384,7 +379,6 @@ main {
 .gallery-item img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
   display: block;
 }
 
@@ -407,7 +401,7 @@ main {
 /* Lightbox Styles */
 .lightbox {
   position: fixed;
-  top: 8rem;
+  top: 120px;
   left: 0;
   right: 0;
   bottom: 0;
